--- a/src/main/resources/templates/gardens.html
+++ b/src/main/resources/templates/gardens.html
@@ -17,6 +17,7 @@
         </button>
     </span>
 </div>
-<a th:href="@{/garden/add}">Add a garden</a>
+<button><a th:href="@{/garden/add}">Add a garden</a></button>
+<button><a th:href="@{/plant}">Plants</a></button>
 </body>
 </html>
