--- a/src/main/resources/templates/plants.html
+++ b/src/main/resources/templates/plants.html
@@ -1,17 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Plants</title>
-</head>
-<body>
-<h2>Plants</h2>
-<div th:each="plant:${plantList}">
-    <span th:text="${plant.name}"></span>
-    <span th:text="${plant.plantType}"></span>
-    <span th:text="${plant.variety}"></span>
-    <span th:text="${plant.plantSurface}"></span>
+<div th:replace="fragments/head :: head"></div>
+<body class="bg-gray-100">
+<div class="flex min-h-screen">
+    <div th:replace="fragments/aside :: aside"></div>
+    <div class="flex-initial w-5/6">
+        <div class="bg-white border border-gray-200 rounded-lg shadow m-4 p-2">
+            <div class="divide-x divide-gray-300">
+                <button type="button"
+                        class="px-2 text-md font-medium text-gray-500 focus:outline-none bg-white hover:text-blue-400 focus:z-10 focus:ring-4 focus:ring-gray-100">
+                    <a th:href="@{/plant}">
+                        <i class="icon-refresh"></i>
+                        <span class="mx-2">Refresh</span>
+                    </a>
+                </button>
+                <button type="button"
+                        class="px-2 text-md font-medium text-gray-500 focus:outline-none bg-white hover:text-blue-400 focus:z-10 focus:ring-4 focus:ring-gray-100">
+                    <a th:href="@{/plant/add}">
+                        <i class="icon-plus"></i>
+                        <span class="mx-2">Add Plant</span>
+                    </a>
+                </button>
+            </div>
+        </div>
+        <div>
+            <div class="p-2 m-4">
+                <nav class="flex" aria-label="Breadcrumb">
+                    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+                        <li class="inline-flex items-center">
+                            <a href="#" class="inline-flex items-center text-sm font-medium text-gray-500 hover:text-blue-600">
+                                <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
+                                </svg>
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <div class="flex items-center">
+                                <svg class="rtl:rotate-180 w-3 h-3 text-gray-500 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                                </svg>
+                                <a th:href="@{/plant}" class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2">Plants</a>
+                            </div>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="bg-white border border-gray-200 rounded-lg shadow m-4 p-2">
+                <div class="px-2 py-1">
+                    <h2 class="text-2xl tracking-tight text-gray-500">Plants</h2>
+                </div>
+                <div class="px-4 py-1 divide-y divide-gray-300">
+                    <div th:each="plant:${plantList}" class="py-4">
+                        <div class="flex justify-between items-center">
+                            <p th:text="${plant.name} + ' - ' + ${plant.variety} + ' - ' +  ${plant.plantSurface} + 'cm²'" class="text-gray-500 text-bold text-xl tracking-tight"></p>
+                            <div class="flex justify-between items-center">
+                                <div class="text-gray-500 text-xl tracking-tight flex justify-between items-center">
+                                    <i class="icon-tag"></i>
+                                    <p th:text="${plant.plantType}" class="mx-2"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<button><a th:href="@{/plant/add}">Add a plant</a></button>
 </body>
 </html>
