--- a/src/main/resources/templates/addPlanting.html
+++ b/src/main/resources/templates/addPlanting.html
@@ -1,10 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add Planting</title>
-</head>
-<body>
+<div th:replace="fragments/head :: head"></div>
+<body class="bg-gray-100">
+<div class="flex min-h-screen">
+    <div th:replace="fragments/aside :: aside"></div>
+    <div class="flex-initial w-5/6">
+        <div class="bg-white border border-gray-200 rounded-lg shadow m-4 p-2">
+            <div class="divide-x divide-gray-300">
+                <button class="px-2 text-md font-medium text-gray-500 focus:outline-none bg-white hover:text-blue-400 focus:z-10 focus:ring-4 focus:ring-gray-100"
+                        type="button">
+                    <a th:href="@{/garden/{idGarden}/square/{idSquare}/planting/add(idGarden=${garden.idGarden}, idSquare=${square.idSquare})}">
+                        <i class="icon-refresh"></i>
+                        <span class="mx-2">Refresh</span>
+                    </a>
+                </button>
+            </div>
+        </div>
+        <div>
+            <div class="p-2 m-4">
+                <nav aria-label="Breadcrumb" class="flex">
+                    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+                        <li class="inline-flex items-center">
+                            <a class="inline-flex items-center text-sm font-medium text-gray-500 hover:text-blue-600"
+                               href="#">
+                                <svg aria-hidden="true" class="w-3 h-3 me-2.5" fill="currentColor"
+                                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
+                                </svg>
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <div class="flex items-center">
+                                <svg aria-hidden="true" class="rtl:rotate-180 w-3 h-3 text-gray-500 mx-1"
+                                     fill="none" viewBox="0 0 6 10" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m1 9 4-4-4-4" stroke="currentColor" stroke-linecap="round"
+                                          stroke-linejoin="round" stroke-width="2"/>
+                                </svg>
+                                <a class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2"
+                                   th:href="@{/garden}">Gardens</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="flex items-center">
+                                <svg aria-hidden="true" class="rtl:rotate-180 w-3 h-3 text-gray-500 mx-1"
+                                     fill="none" viewBox="0 0 6 10" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m1 9 4-4-4-4" stroke="currentColor" stroke-linecap="round"
+                                          stroke-linejoin="round" stroke-width="2"/>
+                                </svg>
+                                <a class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2"
+                                   th:href="@{/garden/{idGarden}(idGarden=${garden.idGarden})}"
+                                   th:text="${garden.name}"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="flex items-center">
+                                <svg aria-hidden="true" class="rtl:rotate-180 w-3 h-3 text-gray-500 mx-1"
+                                     fill="none" viewBox="0 0 6 10" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m1 9 4-4-4-4" stroke="currentColor" stroke-linecap="round"
+                                          stroke-linejoin="round" stroke-width="2"/>
+                                </svg>
+                                <a class="ms-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ms-2"
+                                   th:href="@{/garden/{idGarden}/square/{idSquare}/planting/add(idGarden=${garden.idGarden}, idSquare=${square.idSquare})}">Add
+                                    Planting</a>
+                            </div>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="bg-white border border-gray-200 rounded-lg shadow m-4 p-2">
+                <div class="px-2">
+                    <h2 class="text-2xl tracking-tight text-gray-500">New Planting</h2>
+                </div>
+                <div class="px-4 py-1 divide-y divide-gray-300">
+                    <div>
+                        <form method="post"
+                              th:action="@{/garden/{idGarden}/square/{idSquare}/planting/add(idGarden=${garden.idGarden}, idSquare=${square.idSquare})}"
+                              th:object="${newPlanting}">
+                            <div class="py-2">
+                                <label class="block mb-2 text-sm font-medium text-gray-500 dark:text-white"
+                                       for="plant">Plant</label>
+                                <select class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                                        id="plant"
+                                        name="plant">
+                                    <option th:each="plant : ${plantList}"
+                                            th:text="${plant.nameAndVariety}" th:value="${plant.idPlant}"></option>
+                                </select>
+                                <p class="text-red-500" th:errors="*{plant}"
+                                   th:if="${#fields.hasErrors('plant')}"></p>
+                            </div>
+                            <div class="py-2">
+                                <label class="block mb-2 text-sm font-medium text-gray-500"
+                                       for="quantity">Quantity</label>
+                                <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                                       id="quantity" placeholder="0"
+                                       required
+                                       th:field="*{quantity}" type="number"/>
+                                <p class="text-red-500" th:errors="*{quantity}"
+                                   th:if="${#fields.hasErrors('quantity')}"></p>
+                            </div>
 
+                            <div class="py-2">
+                                <label class="block mb-2 text-sm font-medium text-gray-500" for="setUpDate">Set-up
+                                    Date</label>
+                                <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                                       id="setUpDate" placeholder=""
+                                       required
+                                       th:field="*{setUpDate}" type="date"/>
+                                <p class="text-red-500" th:errors="*{setUpDate}"
+                                   th:if="${#fields.hasErrors('setUpDate')}"></p>
+                            </div>
+
+                            <div class="py-2">
+                                <label class="block mb-2 text-sm font-medium text-gray-500" for="harvestDate">Harvest
+                                    Date</label>
+                                <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                                       id="harvestDate" placeholder=""
+                                       required
+                                       th:field="*{harvestDate}" type="date"/>
+                                <p class="text-red-500" th:errors="*{harvestDate}"
+                                   th:if="${#fields.hasErrors('harvestDate')}"></p>
+                            </div>
+
+                            <div class="text-red-500" th:if="${#fields.hasGlobalErrors()}">
+                                <p th:each="err : ${#fields.globalErrors()}">
+                                    <span th:text="${err}"></span>
+                                </p>
+                            </div>
+                            <div class="py-4 flex justify-end">
+                                <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                                        type="submit">
+                                    Add
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
