--- a/src/main/resources/templates/addSquare.html
+++ b/src/main/resources/templates/addSquare.html
@@ -56,8 +56,13 @@
                 </nav>
             </div>
             <div class="bg-white border border-gray-200 rounded-lg shadow m-4 p-2">
-                <div class="px-2">
-                    <h2 class="text-2xl tracking-tight text-gray-500">New Square</h2>
+                <div class="flex justify-between items-center">
+                    <div class="px-2">
+                        <h2 class="text-2xl tracking-tight text-gray-500">New Square</h2>
+                    </div>
+                    <div class="px-2">
+                        <p class="text-lg tracking-tight text-gray-500" th:text="'Garden Remaining Surface : ' + ${garden.gardenRemainingSurface} + ' cm²'"></p>
+                    </div>
                 </div>
                 <div class="px-4 py-1 divide-y divide-gray-300">
                     <div>
