--- a/src/main/resources/templates/garden.html
+++ b/src/main/resources/templates/garden.html
@@ -73,7 +73,7 @@
                             <div>
                                 <h4 class="text-gray-500 text-bold text-xl tracking-tight">Squares</h4>
                             </div>
-                            <div>
+                            <div th:if="${garden.gardenRemainingSurface > 0}">
                                 <button class="px-2 text-md font-medium text-gray-500 focus:outline-none bg-white hover:text-blue-400 focus:z-10 focus:ring-4 focus:ring-gray-100"
                                         type="button">
                                     <a th:href="@{/garden/{idGarden}/square/add(idGarden=${garden.idGarden})}">
@@ -106,7 +106,7 @@
                                                 <h4 class="text-gray-500 text-bold text-lg tracking-tight">
                                                     Plantings</h4>
                                             </div>
-                                            <div>
+                                            <div th:if="${square.squareRemainingSurface > 0}">
                                                 <button class="px-2 text-md font-medium text-gray-500 focus:outline-none bg-white hover:text-blue-400 focus:z-10 focus:ring-4 focus:ring-gray-100"
                                                         type="button">
                                                     <a th:href="@{/garden/{idGarden}/square/{idSquare}/planting/add(idGarden=${garden.idGarden},idSquare=${square.idSquare})}">
@@ -115,7 +115,6 @@
                                                 </button>
                                             </div>
                                         </div>
-
                                         <div th:if="${square.plantingList.size() > 0} ">
                                             <div th:each="planting: ${square.plantingList}">
                                                 <div class="flex justify-between items-center p-2">
